# tsyk-website

2048-v2-php/: .htaccess  README.md  accountapi.php  admin.php  index.html  lb2api.php  lbapi.php  palaute.php  profanity.php  rankapi.php  sql.php
2048-v2-php/js/: accountmanager.js  application.js  game_manager.js  grid.js  html_actuator.js  keyboard_input_manager.js  local_data_manager.js
2048-v2-php/style/: checkbox.css  main.css
2048-v5-rust-backend/: Caddyfile-prod  Caddyfile-test  Cargo.toml  Dockerfile  README.md  compose.yaml  pull.sh
2048-v5-rust-backend/src/: app_error.rs  database.rs  mail.rs  main.rs  schema.sql  user_api.rs  util.rs
src/routes/ruokavuorot/: data.ts  parser.ts
tsyk-website/: .prettierrc  Caddyfile  Dockerfile  build.sh  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
tsyk-website/src/routes/: +layout.svelte  +layout.ts  +page.server.ts  +page.svelte  Header.svelte  InstagramEmbed.svelte  app.css  app.less
tsyk-website/src/routes/ilmoitukset/: +page.svelte
tsyk-website/src/routes/login/: +page.svelte
tsyk-website/src/routes/minecraft/: +page.server.ts  +page.svelte
tsyk-website/src/routes/oispaeliitti/: +page.svelte  +page.ts  GameGrid.svelte  engine.js  tiles.css
tsyk-website/src/routes/oispaeliitti/info/: +page.svelte
tsyk-website/src/routes/palauteboksi/: +page.svelte
tsyk-website/src/routes/register/: +page.svelte
tsyk-website/src/routes/ruokavuorot/: +page.svelte  data.ts  model.ts  parser.ts
