[package]
name = "eliittilukio-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0.75"
dotenv = "0.15.0"
lettre = { version = "0.10.4", features = ["rustls-tls", "smtp-transport", "builder"], default-features = false }
chrono = "0.4.31"
argon2 = "0.5.2"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "8.3.0"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
bigdecimal = "0.4.1"
regex = "1.10.2"
lazy_static = "1.4.0"
